--- a/index.html
+++ b/index.html
@@ -7,16 +7,16 @@
     <title>Linking It All Together</title>
     <link rel="stylesheet" href="style.css">
 </head>
-
+ 
 <body>
     <!--Give this h1 an id of "top"-->
-    <h1>Linking It All Together</h1>
+    <h1>Top</h1>
 
     <!--See the README.md for additional instructions.-->
-
+    <img src="html.jpeg" alt="HTML poster"> 
     <!--FIRST add an image with a src of the html.jpeg in the images subfolder.
         This is an example of a relative link. -->
-
+<a href="http://writingexercises.co.uk/random-name-generator.php/html/">Check Out This Name Generator.</a>
     <!--SECOND add some text with a link to your favorite website.
         Make it open in a new tab/window.
         This is an example of an absolute link.-->
