--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
     <h3>Navigation:</h3>
     <ul>
         <li><a href="#paragraph1">Paragraph 1</a></li>
-        <li>Paragraph 2</li>
-        <li>Paragraph 3</li>
+        <li><a href="#paragraph2">paragraph 2</a></li>
+        <li><a href="#paragaph3">Paragraph 3</a></li>
     </ul>
 
     <!-- If you wish, you can replace the text below with something else -->
@@ -50,7 +50,8 @@
         corned beef brisket prosciutto jerky short loin.</p>
     
     <!-- Add some extra line breaks between each paragraph! -->
-    
+    <br />
+    <br />
     <p>Prosciutto burgdoggen meatball chicken t-bone short loin. Burgdoggen salami shoulder short ribs swine tail bacon
         jerky beef ribs spare ribs. Pork chop ham hock burgdoggen biltong brisket bacon. Bacon spare ribs brisket, pork
         chop cupim jerky chicken kielbasa tri-tip pork loin meatloaf drumstick strip steak andouille. Shank salami pig.</p>
@@ -58,7 +59,7 @@
     <br />
 
     <!--Make a link that jumps back to the top of the page.-->
-    Back to top
+    <li><a href="top">top</a></li> 
 
     <!-- In case you were wondering... -->
     <em>Where did this silly text come from?</em>
